fix(lightbox): remove scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,3 +106,8 @@ img {
 .cdk-drop-list-dragging :not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space /
+  background: transparent; / optional: just make scrollbar invisible */
+}
